--- a/volleybal.html
+++ b/volleybal.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fotopagina</title>
+  <title>Volleybal</title>
   <link rel="stylesheet" type="text/css" href="volleybal.css" />
 </head>
 <body>
   
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="https://rensschoonman.github.io/toonjoosten/Thuispagina.html" class="zijkantnav">Thuispagina</a>
-    <a href="https://rensschoonman.github.io/toonjoosten/Photoshoppen.html" class="zijkantnav">Photoshoppen</a>
+    <a href="https://rensschoonman.github.io/thuispagina/Thuispagina.html" class="zijkantnav">Thuispagina</a>
+    <a href="https://rensschoonman.github.io/photoshoppen/Photoshoppen.html" class="zijkantnav">Photoshoppen</a>
     <a href="https://www.youtube.com/@toonjoosten1" class="zijkantnav">Videos</a>
-    <a href="https://rensschoonman.github.io/toonjoosten/Bridge.html" class="zijkantnav">Bridge</a>
-    <a href="https://rensschoonman.github.io/toonjoosten/Fotografie.html" class="zijkantnav">Fotografie</a>
+    <a href="https://rensschoonman.github.io/bridge/Bridge.html" class="zijkantnav">Bridge</a>
+    <a href="https://rensschoonman.github.io/fotografie/fotografie.html" class="zijkantnav">Fotografie</a>
   </div>
   
 
